# nino-medical-ai-demo

./: .gitignore  AI_Act_Summary.txt  AI_Policy_Consultation_Template.md  Advisory_Ethics_Board.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTION_STATUS.md  Enhancement_Action_Plan.md  Execution_Roadmap.md  Horizon_Europe_Application_Plan.md  ISO_AI_Standards_Reference.md  Impact_Metrics_Framework.md  LAUNCH_ANNOUNCEMENT.md  LICENSE  NEXT_PHASE_STATUS.md  Normative_Compliance_Guide.txt  Open_Source_Compliance_Analysis.txt  PERFORMANCE_IMPROVEMENTS.md  PROJECT_REMINDER.md  Project_Email_Report_2025-07-19.md  README.md  SECURITY.md  SOCIAL_MEDIA_PROMOTION.md  STREAMLIT_DEPLOYMENT.md  VISITOR_ANALYTICS.md  analytics_tracker.py  app.py  changes_summary.txt  compare_balanced_vs_unbalanced.py  enhanced_analytics.py  enhanced_feedback_collector.py  evaluate_model_performance.py  feedback_collector.py  google_analytics_config.py  google_analytics_integration.py  notification_manager.py  packages.txt  performance_config.py  project_performance_analysis.py  pyproject.toml  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_collaboration.md
.github/workflows/: ci.yml  keep-alive.yml
.streamlit/: config.toml
analytics/: usage_data.json  user_contacts.json
ethics_board/: ITALIANOEthics_Board_Candidates.md
impact_metrics/: Analytics_Setup.md
iso_standards/: ISO_Standards_Implementation_Plan.md  Risk_Assessment_ISO14971.md
pages/: feedback_dashboard.py  visitor_dashboard.py
policy_engagement/: Active_Consultations_Tracker.md
tests/: test_app.py
