[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nino-medical-ai-demo"
version = "0.1.0"
description = "Medical AI Demo Platform"
requires-python = ">=3.8"
dependencies = [
    "streamlit==1.28.1",
    "pandas==2.1.1",
    "numpy==1.24.3",
    "scikit-learn>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests", 
    "slow: marks tests as slow running",
]
